css/style.css
/* Variables */

:root {
  --main-text: #ddd;
  --button-color: rgb(0, 2, 143);
  --button-hover-color: rgba(28, 56, 182, 0.5);
  --range-bg-color: #3071A9;
}

/* Sitewide Rules */

html, body {
  font-family: sans-serif;
  color: var(--main-text);
  background-color: transparent;
  text-shadow: 2px 2px 3px black;
}

main {
  position: absolute;
  height: 80vh;
  width: 100%;
  display: flex;
  justify-items: center;
  align-items: center;
}

/* Background */
body::before {
  content: "";
  position: fixed;
  margin: auto;
  width: 400%;
  height: 400%;
  top: -100%;
  left: -150%;
  bottom: -100%;
  right: -100%;
  z-index: -1;
  background: url("../assets/stars_bg.png") center repeat repeat;
  animation-duration: 720s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-name: stargazing;
}

@keyframes stargazing {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

fieldset {
  border: none;
}

legend {
  display: none;
}

/* Range Sliders */

input[type=range] {
  height: 38px;
  -webkit-appearance: none;
  margin: 10px 0;
  width: 100%;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 10px;
  cursor: pointer;
  /* animate: 0.2s; */
  box-shadow: 1px 1px 1px #000000;
  background: var(--range-bg-color);
  border-radius: 5px;
  border: 1px solid #000000;
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 1px 1px 1px #000000;
  border: 1px solid #000000;
  height: 30px;
  width: 15px;
  border-radius: 5px;
  background: #FFFFFF;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -11px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: var(--range-bg-color);
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 10px;
  cursor: pointer;
  /* animate: 0.2s; */
  box-shadow: 1px 1px 1px #000000;
  background: var(--range-bg-color);
  border-radius: 5px;
  border: 1px solid #000000;
}
input[type=range]::-moz-range-thumb {
  box-shadow: 1px 1px 1px #000000;
  border: 1px solid #000000;
  height: 30px;
  width: 15px;
  border-radius: 5px;
  background: #FFFFFF;
  cursor: pointer;
}
input[type=range]::-ms-track {
  width: 100%;
  height: 10px;
  cursor: pointer;
  /* animate: 0.2s; */
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: var(--range-bg-color);
  border: 1px solid #000000;
  border-radius: 10px;
  box-shadow: 1px 1px 1px #000000;
}
input[type=range]::-ms-fill-upper {
  background: var(--range-bg-color);
  border: 1px solid #000000;
  border-radius: 10px;
  box-shadow: 1px 1px 1px #000000;
}
input[type=range]::-ms-thumb {
  margin-top: 1px;
  box-shadow: 1px 1px 1px #000000;
  border: 1px solid #000000;
  height: 30px;
  width: 15px;
  border-radius: 5px;
  background: #FFFFFF;
  cursor: pointer;
}
input[type=range]:focus::-ms-fill-lower {
  background: var(--range-bg-color);
}
input[type=range]:focus::-ms-fill-upper {
  background: var(--range-bg-color);
}

input[type=range] {
  background: transparent;
}

/* Utility Classes */

.container {
  display: grid;
  grid-auto-rows: minmax(100px, auto);
  place-items: center;
  max-width: 700px;
  padding: 0 4em;
  margin: auto;
  height: auto;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

/* Semantic Classes */

.navbar {
  margin: 1.5em 2em;
}

.nav-list {
  list-style: none;
}

.nav-list-item {
  cursor: pointer;
  opacity: 0.7;
  transition: all 0.3s ease-in-out;
}

.nav-list-item:hover {
  opacity: 1;
  text-shadow: #CCC 0 0 3px;
}

.title {
  font-size: 6em;
  /* padding: 0 1em; */
}

.description {
  font-style: italic;
  font-weight: normal;
  opacity: 0.6;
  /* margin: 2em 0; */
}

.button {
  padding: 0.7em;
  margin: auto;
  width: max-content;
  border: 1px solid #ccc;
  border-radius: 5px;
  /* background-color: black; */
  color: white;
  text-transform: uppercase;
  font-weight: bold;

  transition-property: background-color;
  transition-duration: 0.5s;
  transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
  transition-delay: 0s;
}

.button:hover {
  background-color: var(--button-hover-color);
}

.question-container {
  margin-bottom: 1em;
  border-radius: 10px;
}

.question-header {
  font-size: 1.5em;
  color: #ccc;
}

.question-text {
  font-size: 1.3em;
  font-style: italic;
  /* text-align: justify; */
  line-height: 1.3;
  border-left: 5px solid #ccc;
  margin: 1.75em auto;
  padding: 0 10px;
  width: 100%;
}

.input-container {
  display: grid;
  justify-content: center;
}

.question-label {
  padding: 1em;
}

.cta-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

